# IVSparse-dev

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  a.out  basic_testing  benchmark.cpp  cleanInstall  countVecMat.cpp  csf2_test.txt  csf3_test.txt  docTest.cpp  eigen_playground.cpp  idk.cpp  ivsparse-benchmark.sh  main  main.cpp  massif.out.29729  new_test  new_test.cpp  pbmc3k.cpp  playground.cpp  plotMat.py  test  test.cpp  test.csfr  test.py  test.s  testing.cpp  thisRightHere  timeData.csv
.github/workflows/: static.yml
Benchmarking/: .RData  .Rhistory  .~lock.timeData.csv#  DeleteTHis.cpp  OLDrawTimeData.csv  OLDrawTimeData2.csv  OLDtimeData.csv  README_TO_REPRODUCE_RESULTS.txt  benchmark  benchmark.cpp  benchmarkAnalysis.cpp  csf3.txt  massif.out.20526  popularBenchmark.sh  rawTimeData.csv  rawTimeDataFinal.csv  realSizeData.csv  runBenchmark.sh  runBenchmarkV2.sh  simSizeData.csv  sizeData1000x1000.csv  sizeData100x100.csv  ssget  testing.cpp  timeData.csv  timeDataFinal.csv
Benchmarking/Old Results/: OLDtimeData2.csv
Benchmarking/OldResults/: timeData.csv
Benchmarking/R/: .Rhistory  backup_simulated_visualization.Rmd  csf_benchmarking.Rmd  simulated_bench_visualization.Rmd  simulated_visualization.Rmd
Benchmarking/armadillo_bits/: Base_meat.hpp  Cube_bones.hpp  SpMat_meat.hpp  config.hpp  op_norm_meat.hpp
Benchmarking/denseMatrices/: jgl011.mtx  qc324.mtx  rgg010.mtx  tols90.mtx
Benchmarking/helpful_scripts/: CSC_to_COO.py
Benchmarking/lib/: 0.01density  10density  1density  5density  FullSimulatedBench  FullSimulatedBench.cpp  Makefile  benchmark  benchmark.cpp  benchmarkAnalysis.cpp  benchmarkFunctions.h  compressionBench  compressionBench.cpp  datasetSizeBench.cpp  densityBenchmark.cpp  mat-gen-mem-calc.py  movieBench.cpp  rawTimeData.csv  runFullSimulatedBench.sh  runSimBench_COO.sh  simulatedBench.cpp  simulatedBench_COO  simulatedBench_COO.cpp  simulatedBench_COO_testing.cpp  simulatedBench_CSC  simulatedBench_CSC.cpp  simulatedBenchmark.cpp  suiteSparseBenchmarkFunctions.h  timeData.csv
Benchmarking/old_results/: rawTimeData.csv  rawTimeData3.csv  script.py  timeData.csv
Benchmarking/results/: EigenResults.csv  EigenResults_0.01.csv  EigenResults_COO.csv  EigenResults_CSC.csv  IVCSCResults.csv  IVCSCResults_0.01.csv  IVCSCResults_0.1.csv  IVCSCResults_COO.csv  IVCSCResults_CSC.csv  VCSCResults.csv  VCSCResults_0.01.csv  VCSCResults_0.1.csv  VCSCResults_COO.csv  VCSCResults_CSC.csv  nEigenResults_CSC.csv  nIVCSCResults_CSC.csv  nVCSCResults_CSC.csv  newEigenResults_CSC.csv  newIVCSCResults_CSC.csv  newVCSCResults_CSC.csv
Benchmarking/sparseMatrices/: bcsstm26.mtx  cry10000.mtx
CMake/: testingMain
CSF/: SparseMatrix
CSF/src/: CSF_2_Iterator.hpp  CSF_BLAS.hpp  CSF_Base_Methods.hpp  CSF_CSC.hpp  CSF_CSC_Iterator  CSF_CSC_Iterator.cpp  CSF_CSC_Iterator.hpp  CSF_Constructors.hpp  CSF_Iterators.hpp  CSF_Methods.hpp  CSF_NewIterator.hpp  CSF_Operators.hpp  CSF_Private_Methods.hpp  CSF_SparseMatrix.hpp  CSF_SparseMatrixBase.hpp  CSF_Vec_BLAS.hpp  CSF_Vector.hpp  CSF_constructor.hpp  CSF_iterator.hpp  CSF_methods.hpp  iterator.hpp  main.cpp
Documentation/: BLASExample  BLASExample.cpp  ConstructorExample.cpp  IteratorExample.cpp
Examples/: BLASExample.cpp  ConstructorExample.cpp  IteratorExample.cpp
IVSparse/: SparseMatrix
IVSparse/src/: IVSparse_Base_Methods.hpp  IVSparse_SparseMatrixBase.hpp
SRLE/: .gitignore  ByteIterator.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  byteReader.cpp  sky_binary.cpp
SRLE/R/: benchmark.R  benchmark.Rmd
SRLE/inputFiles/: test.txt
SRLE/src/: .gitignore  ByteIterator.cpp  CSF_Constructor  CSF_Constructor.cpp  CSFmatrix.h  DeBruinesComp.cpp  GenericCSCIterator.cpp  SRLE_Constructor.cpp  a.out  byteReader.cpp  const_array_iterator.cpp  const_iterator.cpp  dbc.cpp  dbc2.cpp  dbc3.cpp  dbc_beta1.cpp  dbc_refactor.cpp  iterTest  iterTest.cpp  iteratorBenchmark  iteratorBenchmark.cpp  main  main.cpp  matrixCreator.cpp  playground.cpp  rcppTest.cpp  sky_binary.cpp  sky_playground  sky_playground.cpp  test.cpp  testRun.sh
SRLE/src/depreciated_versions/: DeBruinesComp.cpp  byteReader.cpp  dbc.cpp
SRLE/src/helperClasses/: GenericCOOIterator.cpp  GenericCSCIterator.cpp  matrixCreator.cpp  sky_playground.cpp
SRLE/src/include/: CPP_Lib.hpp  CSF.hpp  CSFLas.hpp  CSF_BLAS.hpp  CSF_Lib.hpp  SRLE_Lib.hpp  const_iterator.cpp  constants.hpp  functions.hpp  iterator.h  iterator.hpp  iteratorTwo.hpp  type_encoding.hpp  variable_value_index.cpp
SRLE/src/testing_files/: a.out  sky_binary.cpp  test.cpp  test2.cpp  test3.cpp
SRLE/src/variations/: CSFIterator.cpp  CSFMatrix.cpp  DeBruine's_Compressed_Matrix_Name.cpp  GenericCSCIterator.cpp  SRLEConverter.cpp  const_array_iterator.cpp  matrixCreator.cpp  sky_binary.cpp
SRLE/tests/: CSFTests2.cpp  testCSF.cpp  testHelperFunctions.hpp
data/pbmc3k_csc/: data.txt  indices.txt
doc/Examples/: BLASExample.cpp
doc/doc_pages/: getting_started.md  license.md  mainpage.md
doc/html/: _c_s_c___b_l_a_s_8hpp.html  _c_s_c___b_l_a_s_8hpp_source.html  _c_s_c___constructors_8hpp.html  _c_s_c___constructors_8hpp_source.html  _c_s_c___iterator_8hpp.html  _c_s_c___iterator_8hpp_source.html  _c_s_c___iterator___methods_8hpp.html  _c_s_c___iterator___methods_8hpp_source.html  _c_s_c___methods_8hpp.html  _c_s_c___methods_8hpp_source.html  _c_s_c___operators_8hpp.html  _c_s_c___operators_8hpp_source.html  _c_s_c___private___methods_8hpp.html  _c_s_c___private___methods_8hpp_source.html  (+297 more)
misc/: GenericCOOIterator.cpp  matrix_creator.cpp
pybindBuild/: CMakeCache.txt  CMakeLists.txt  Makefile  PyVSparse.cpp  cmake_install.cmake  combo.py  generate.py  setup.py  test.py
pybindBuild/PyVSparse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: negative_user_tests.cpp  positive_user_tests.cpp  test.cpp  test.txt  test1.cpp
tests/: CMakeCache.txt  CSFTests.cpp  CSFTests2.cpp  cmake_install.cmake  test.cpp  test.hpp  test2.cpp  testHelperFunctions.hpp  testing.cpp  testingMain.cpp  testingMain[1]_include.cmake  testingMain[1]_tests.cmake
(+258 files in other folders)
